--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "express-jwt": "^5.3.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.19",
+    "mongoose-unique-validator": "^2.0.3",
+    "passport": "^0.4.1"
   },
   "devDependencies": {
     "got": "^11.3.0",
