--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "start": "nodemon index.js",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000 --detectOpenHandles"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -22,7 +28,11 @@
     "passport": "^0.4.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "got": "^11.3.0",
+    "jest": "^26.0.1",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2",
     "tape": "^4.7.0"
   },
   "repository": {
